# daquassor

./: .gitignore  Makefile  README.md  fake8_conf.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: default.yml
daquassor/: __main__.py
daquassor/api/: __init__.py  exception_handlers.py  init_db.py
daquassor/api/models/: api_response.py
daquassor/common/: config.py  config_provider.py
daquassor/config/: config.json  config.py
daquassor/data_extractors/: __init__.py  csv_file_data_extractor.py  data_extractors_factory.py  i_data_extractor.py  i_graph_data_extractor.py  i_tabular_data_extractor.py  static_tabular_data_extractor.py
daquassor/data_quality_assessors/: i_dataset_metrics_calculator.py
daquassor/factories/: data_extractors_factory.py
daquassor/interfaces/: i_data_extractor.py
daquassor/metric_calculators/: i_dataset_metric_calculator.py
daquassor/providers/: config_provider.py  csv.py  csv_file_provider.py  i_data_provider.py  i_provider.py  json_file_provider.py
daquassor/quality_assessors/: i_data_quality_assessor.py
daquassor/repositories/: i_data_quality_report_repository.py  i_dataset_metric_repository.py
daquassor/rest_api/: __init__.py  exception_handlers.py  init_db.py  main.py
daquassor/result_repositories/: i_data_quality_report_repository.py  i_dataset_metric_repository.py  i_workflow_configuration_repository.py
daquassor/workflows/: i_workflow.py
tests/integration/: test_csv_extractor.py  test_csv_provider.py
(+24 files in other folders)
