[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daquassor"
version = "0.0.1"
authors = [
  { name="Szymon Pucher", email="sajmontube@gmail.com" },
]
description = "Data Quality Assessment tool for your data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning"
]
dependencies = [
    "pandas",
    "pydantic",
    "typer",
    "zope.component",
    "zope.interface",
]

[project.urls]
"Homepage" = "https://github.com/szymonpucher/daquassor"
"Bug Tracker" = "https://github.com/szymonpucher/daquassor/issues"