[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daquassor"
version = "0.1.0"
authors = [
  { name="Szymon Pucher", email="sajmontube@gmail.com" },
]
description = "Data Quality Assessment tool for your data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning"
]
dependencies = [
    "confz",
    "email-validator",
    "fastapi",
    "networkx",
    "pandas",
    "pydantic",
    "python-dateutil",
    "sqlmodel",
    "typer",
    "uvicorn"
]

[project.urls]
"Homepage" = "https://github.com/szymonpucher/daquassor"
"Bug Tracker" = "https://github.com/szymonpucher/daquassor/issues"